diff結果が改行されず画面が横に伸びてしまうバグを修正

--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,11 @@
   text-align: left;
 }
 
+.App div#result pre {
+  word-break: break-all;
+  white-space: pre-wrap;
+}
+
 .red {
   color: red;
 }
